Improving inputs refreshing crudes 1.0.0 alpha build 23

--- a/src/main/java/Interface/UserInterface.form
+++ b/src/main/java/Interface/UserInterface.form
@@ -1574,7 +1574,7 @@
                               <Component id="jLabel18" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                               <Component id="producttype" min="-2" pref="33" max="-2" attributes="0"/>
-                              <EmptySpace pref="18" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="jLabel40" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="prdqty" min="-2" pref="34" max="-2" attributes="0"/>
